public/scss/style.scss
@import url(https://fonts.googleapis.com/css?family=Bevan);
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700);

$mainColor:#0a2929;
$blueColor:#33cccc;
$heartColor:#FE4365;
$mainFont:"Source Sans", sans-serif;
$displayFont: 'Bevan', cursive;
$enable-flex: true;

body {
  font-family:$mainFont;
  font-weight:300;
  color:$mainColor;
  font-size:16px;
}

h1, h2 {
  font-family: $displayFont;
}

h3 {
  font-weight:700;
}

a {
  color:$blueColor;
  transition:opacity .3s;
  &:hover, 
  &:focus {
    color:$blueColor; 
    opacity:.6;
    text-decoration: none; 
  }
}
.logo {
  font-family: $displayFont;
  color: $mainColor;
  transition: color .3s;
  font-size:60px;
  cursor: pointer;
  &:hover, 
  &:focus {
    color:$blueColor;
    text-decoration: none; 
  }
}

.navbar-default {
    background-color: $blueColor;
    border:0;
    border-radius:0;
    padding:10px 0px;
    font-weight:700;
    color:white;
}


.post-btn {
  background-color:white;
  color:$mainColor;
  transition:opacity .3s;
  &:hover {
    background-color:white!important;
    opacity:.6;
  }
}


.navbar-default .navbar-nav>li>a {
  color: $mainColor;
  transition:opacity .3s;
  &:hover {
    opacity:.6;
  }
}

.mock {
  background-color: $blueColor;
  min-height:300px;
  margin-bottom:20px;
  transition:opacity .3s;
  padding:20px;
}

.mock-small {
  background-color: $blueColor;
  height:150px;
  margin-bottom:20px;
  transition:opacity .3s;
  padding:20px;
}


.btn {
  font-weight:700;
  border-radius: 0px;
}

.btn-lg {
  width:100%;
}

.form-group-lg {
  .form-control {
    border-radius:0px;
  }
}

.icon{
  width: 32px;
  height: 32px;
  fill: #ccc;
}

.icon.is-x2{
  width: 64px;
  height: 64px;
}

.icon.is-outlined{
  stroke:  $heartColor;
  stroke-width: 2px;
  fill: transparent;
}


.icon.is-hoverable:hover{
  fill: $heartColor;
  cursor: pointer;
}

.icon.is-activeable:active{
  transform: scale(1.25);
  cursor: pointer;
}

.icon.is-transit{
   -webkit-transition: all .35s ease-out;
  -moz-transition: all .35s ease-out;
  -ms-transition: all .35s ease-out;
  -o-transition: all .35s ease-out;
  transition: all .35s ease-out;
}

#container {
 width: 100%;
 margin: 0 auto;
}

.grid-sizer, .masonryImage {
    width:32.5%;
    img {
      width:100%;
    }
  }  

.masonryImage {
  margin-bottom:10px;
  z-index: 1;
} 

.show-item {
  &:hover {
    opacity:1;
  }
}


.item-details {
  padding:10px 20px;
  position:absolute;
  visibility:hidden;
  opacity:0;
  transition: opacity .2s;
  width:100%;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);

    h3 {
      font-family:$displayFont;
      font-weight: normal;
      margin-top:0px;
      z-index:4;
      color:white;
    }
    p {
      color:white;
    }
}

.show-item:hover > .item-details {
    visibility: visible;
    opacity:1;
    top:10%;
    z-index: 5;
} 

.details-image {
  width:100%;
}

.likes {
  font-weight:700;
  color:$heartColor;
}

.plus {
  opacity:.7;
  position: absolute;
  padding: 10px;
  font-size: 40px;
  top: 0px;
  left: 20px;
  color: white;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);

}

@media (max-width: 767px) {
  .navbar-default .navbar-toggle .icon-bar {
      background-color: white;
  }

  .navbar-toggle .icon-bar {
    width: 30px;
    height: 5px;
    border-radius: 0px;
  }
  .navbar-default .navbar-toggle {
      border: 0;
  }
  .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
      background-color: transparent;
  }
  .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border:0;
  }

  .navbar-nav {
      float: right;
      text-align: right;
  }
  .post-btn {
    background-color:transparent;
    &:hover {
     background-color:transparent!important;
    }
    &:focus {
     background-color:transparent!important;
    }
  }
}

@media (max-width: 990px) {
  .grid-sizer, .masonryImage {
    width:49.3%;
  }

}

@media (max-width: 665px) {
  .grid-sizer, .masonryImage {
    width:100%;
  }
}

@media (max-width: 550px) {
  .logo {
    font-size:50px;
  }
}

@media (max-width: 550px) {
  .logo {
    font-size:40px;
  }
}

